fix large screen, overflow

--- a/src/blocks/basket/basket.scss
+++ b/src/blocks/basket/basket.scss
@@ -26,6 +26,7 @@
     display: flex;
     flex-direction: column;
     transition: 500ms ease-in-out;
+    overflow-y: auto;
 }
 
 .basket__title {
